# rust-smart-contract

./: .gitignore  Addition.evm  Cargo.toml  README.md  Rocket.toml  solc.sh
.assets/: curl_geth.sh  git.sh  rust_install.sh  rust_main.sh  sh_git.sh  solc.sh
Artifacts/o1/: opcodes.txt
Contracts/: Contract.sol
src/: 01_main.rs  curl.sh  main  main.rs  main_.rs  main___.rs  main_de.rs
src/evm/: evm.codes  glaube.rs  memory.rs  mod.rs  opcode.rs  params.rs  test.rs  vm.rs  vm_test.rs
src/params/: mod.rs  params.rs
