[package]
name = "read_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.11.1"
rocket_contrib = "0.4.11"
serde_derive = "1.0.138"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]